Associates List styling done with 1 or 2 minor issues with alignment

--- a/styles/aboutPage.module.css
+++ b/styles/aboutPage.module.css
@@ -81,6 +81,7 @@
 .whiteSpaceContainer {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     position: relative;
     padding: 5%;
@@ -103,7 +104,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
+    align-items: center;
 }
 
 .associatesListTitle {
@@ -113,8 +114,6 @@
 }
 
 .listContainer {
-    display: flex;
-    width: 80vw;
     display: flex;
 }
 
